--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-html, body, .app {
-  height: 100vh;
-  background-color: #eee;
-  padding: 1em;
+html,
+body,
+.app {
+	height: 100vh;
+	background-color: #eee;
+	padding: 0;
 }
