make progress bar dissapear after finishing the uploading file and optimize code a bit more

--- a/src/components/messages/messages.styles.scss
+++ b/src/components/messages/messages.styles.scss
@@ -1,4 +1,9 @@
 .messages {
-    height: 440px;
+    height: 62vh;
+    overflow-y: scroll;
+}
+
+.messages__progress {
+    height: 58vh;
     overflow-y: scroll;
 }
