--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,10 @@ body,
 
 /* Messages.js */
 .messages {
+	/* border: 1px solid black; */
+	/* width: 100%; */
 	height: 62vh;
+	/* margin-left: 320px !important; */
 	overflow-y: scroll;
 }
 
